--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=springboot
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/SaudeBem_3
-spring.datasource.username=username
-spring.datasource.password=123456
+spring.datasource.username=postgres
+spring.datasource.password=sl119105
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
